SKY-340 Remove border to prevent shift

--- a/components/NavMobile/NavMobile.module.scss
+++ b/components/NavMobile/NavMobile.module.scss
@@ -40,7 +40,6 @@ NOTE: `!important` used throughout to override MUI styles where the bugs are onl
   font-family: $font-extra-bold;
   font-weight: 500;
   color: $color-black !important;
-  border: 1px solid transparent;
   border-radius: 5px;
   box-sizing: content-box;
 
@@ -48,7 +47,6 @@ NOTE: `!important` used throughout to override MUI styles where the bugs are onl
     background-color: $color-white;
     color: $color-primary-accent !important;
     text-decoration: underline;
-    border: 1px solid $color-white;
   }
 
   &:focus {
